[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.12"

anyhow = "1.0"
rand = "0.8"
futures = "0.3"

chord = { path = "../chord" }

[build-dependencies]
tonic-build = "0.10"